log
Sat, Mar 19, 2022  3:51:29 PM: 
 list.c | 38 ++++++++++++++++++++++++++++++--------
 1 file changed, 30 insertions(+), 8 deletions(-)
test.c: In function 'initialize_exList':
test.c:56:7: error: 'List' {aka 'struct List'} has no member named 'head'
      L->head=L->tail=createNode(j);
       ^~
test.c:56:15: error: 'List' {aka 'struct List'} has no member named 'tail'
      L->head=L->tail=createNode(j);
               ^~
test.c:58:18: error: 'List' {aka 'struct List'} has no member named 'head'
      L->current=L->head;
                  ^~
test.c:65:11: error: 'List' {aka 'struct List'} has no member named 'tail'
          L->tail->next=n;
           ^~
test.c:66:19: error: 'List' {aka 'struct List'} has no member named 'tail'
          n->prev=L->tail;
                   ^~
test.c:67:11: error: 'List' {aka 'struct List'} has no member named 'tail'
          L->tail=n;
           ^~
test.c: In function 'initialize_emptyList':
test.c:78:7: error: 'List' {aka 'struct List'} has no member named 'head'
      L->head=L->tail=NULL;
       ^~
test.c:78:15: error: 'List' {aka 'struct List'} has no member named 'tail'
      L->head=L->tail=NULL;
               ^~
test.c: In function 'test_create':
test.c:89:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head != NULL || L->tail !=NULL || L->current!=NULL){
         ^~
test.c:89:28: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->head != NULL || L->tail !=NULL || L->current!=NULL){
                            ^~
test.c: In function 'test_first_next':
test.c:115:23: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->current != L->head){
                       ^~
test.c:143:23: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->current != L->head->next){
                       ^~
test.c:149:19: error: 'List' {aka 'struct List'} has no member named 'tail'
     L->current = L->tail;
                   ^~
test.c: In function 'test_last_prev':
test.c:188:23: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->current != L->tail){
                       ^~
test.c:205:23: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->current != L->tail->prev){
                       ^~
test.c:211:19: error: 'List' {aka 'struct List'} has no member named 'head'
     L->current = L->head;
                   ^~
test.c: In function 'test_pushfront':
test.c:244:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head==NULL) {
         ^~
test.c:249:9: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->tail==NULL) {
         ^~
test.c:254:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head != L->tail){
         ^~
test.c:254:20: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->head != L->tail){
                    ^~
test.c:259:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head->data != j){
         ^~
test.c:267:16: error: 'List' {aka 'struct List'} has no member named 'head'
     Node* aux=L->head;
                ^~
test.c:273:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head->data != j){
         ^~
test.c:279:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head->next == NULL){
         ^~
test.c:284:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head->next != aux){
         ^~
test.c:285:65: error: 'List' {aka 'struct List'} has no member named 'head'
         sprintf(msg,"head->next->data=%d (debe ser 0)",*(int*) L->head->next->data);
                                                                 ^~
test.c: In function 'test_pushcurrent':
test.c:303:17: error: 'List' {aka 'struct List'} has no member named 'head'
     L->current=L->head;
                 ^~
test.c:311:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head == NULL || L->head->next==NULL){
         ^~
test.c:311:28: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head == NULL || L->head->next==NULL){
                            ^~
test.c:316:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head->next->data != j){
         ^~
test.c:322:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head->next->prev ==NULL){
         ^~
test.c:327:17: error: 'List' {aka 'struct List'} has no member named 'tail'
     L->current=L->tail;
                 ^~
test.c:328:16: error: 'List' {aka 'struct List'} has no member named 'tail'
     Node* aux=L->tail;
                ^~
test.c:335:9: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->tail == NULL || L->tail->data != j){
         ^~
test.c:335:28: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->tail == NULL || L->tail->data != j){
                            ^~
test.c:340:41: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(aux->next == NULL || aux->next!=L->tail){
                                         ^~
test.c:345:9: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->tail->prev == NULL || L->tail->prev!=aux){
         ^~
test.c:345:34: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->tail->prev == NULL || L->tail->prev!=aux){
                                  ^~
test.c: In function 'test_popcurrent':
test.c:362:17: error: 'List' {aka 'struct List'} has no member named 'head'
     L->current=L->head;
                 ^~
test.c:370:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head == NULL || *(int*)L->head->data != 2){
         ^~
test.c:370:35: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head == NULL || *(int*)L->head->data != 2){
                                   ^~
test.c:375:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head->prev != NULL){
         ^~
test.c:386:17: error: 'List' {aka 'struct List'} has no member named 'head'
     L->current=L->head->next;
                 ^~
test.c:387:16: error: 'List' {aka 'struct List'} has no member named 'head'
     Node* aux=L->head->next->next;
                ^~
test.c:394:9: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head->next == NULL || L->head->next!=aux){
         ^~
test.c:394:34: error: 'List' {aka 'struct List'} has no member named 'head'
     if(L->head->next == NULL || L->head->next!=aux){
                                  ^~
test.c:399:22: error: 'List' {aka 'struct List'} has no member named 'head'
     if(aux->prev != L->head){
                      ^~
test.c:410:17: error: 'List' {aka 'struct List'} has no member named 'tail'
     L->current=L->tail;
                 ^~
test.c:411:10: error: 'List' {aka 'struct List'} has no member named 'tail'
     aux=L->tail->prev;
          ^~
test.c:415:10: error: 'List' {aka 'struct List'} has no member named 'tail'
     aux=L->tail->prev;
          ^~
test.c:421:9: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->tail != aux){
         ^~
test.c:426:9: error: 'List' {aka 'struct List'} has no member named 'tail'
     if(L->tail->next != NULL){
         ^~
Compilation failed
a07e5f0
Sat, Mar 19, 2022  3:52:24 PM: 
 list.c | 40 ++++++++++++++++++++--------------------
 1 file changed, 20 insertions(+), 20 deletions(-)
C:\Users\reina\AppData\Local\Temp\ccGWcHxp.o:test.c:(.text+0x553): undefined reference to `firstList'
C:\Users\reina\AppData\Local\Temp\ccGWcHxp.o:test.c:(.text+0x624): undefined reference to `firstList'
C:\Users\reina\AppData\Local\Temp\ccGWcHxp.o:test.c:(.text+0x7fc): undefined reference to `lastList'
collect2.exe: error: ld returned 1 exit status
Compilation failed
30933a1
Sat, Mar 19, 2022  3:53:05 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
86ecd6f
Sat, Mar 19, 2022  6:27:35 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
c2ffe48
Sat, Mar 19, 2022  7:30:41 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
7d109b0
Sat, Mar 19, 2022  7:34:49 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
1701fd9
Sat, Mar 19, 2022  7:36:11 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
301ad10
Sat, Mar 19, 2022  7:36:31 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2525132
Sat, Mar 19, 2022  7:40:33 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
410962e
Sat, Mar 19, 2022  7:45:30 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
cb68c59
Sat, Mar 19, 2022  7:46:15 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
f47cf9c
Sat, Mar 19, 2022  7:47:43 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e44ab4b
Sat, Mar 19, 2022  7:48:08 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
e17487e
Sat, Mar 19, 2022  7:49:00 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
dc467a4
Sat, Mar 19, 2022  7:56:09 PM: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
893bdff
Sat, Mar 19, 2022  8:58:58 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|5
total_score: 15/70
ab29f4f
Sat, Mar 19, 2022  8:59:34 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 15/70
e33fb7f
Sat, Mar 19, 2022  9:51:02 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
78a396f
Sat, Mar 19, 2022  9:52:00 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
27d77eb
